--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,10 +89,9 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
-            <meta-data android:name="android.app.shortcuts"
-                android:resource="@xml/shortcuts" />
 
         </activity>
 
@@ -101,10 +100,12 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+
         <activity
             android:name=".ui.trafficmap.news.NewsActivity"
-            android:label="@string/title_news"
-            />
+            android:label="@string/title_news">
+        </activity>
+
         <activity
             android:name=".ui.about.AboutActivity"
             android:label="@string/title_about" />
@@ -112,6 +113,7 @@
             android:name=".ui.mountainpasses.MountainPassesActivity"
             android:label="@string/title_mountainpasses" />
         <activity android:name=".ui.mountainpasses.passitem.MountainPassItemActivity" />
+
         <activity
             android:name=".ui.trafficmap.TrafficMapActivity"
             android:label="@string/title_trafficmap"
@@ -120,6 +122,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.home.HomeActivity" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
+
         </activity>
 
         <activity
@@ -181,10 +191,13 @@
         </activity>
 
         <activity android:name=".ui.ferries.departures.vesselwatch.VesselWatchDetailsActivity" />
+
         <activity
             android:name=".ui.tollrates.TollRatesActivity"
             android:label="@string/title_tollrates" />
+
         <activity android:name=".ui.camera.CameraActivity" />
+
         <activity android:name=".ui.camera.CameraListActivity" />
 
         <activity android:name=".ui.alert.detail.HighwayAlertDetailsActivity"
